# copi

./: .gitignore  .gitmodules  Cargo.toml  README.md  build-android.sh  build-firmware.sh
copi/: Cargo.toml
copi-command/: Cargo.toml
copi-command/src/: lib.rs
copi-protocol/: Cargo.toml
copi-protocol/src/: lib.rs
copi/src/: main.rs
copi/src/api/: gpio.rs  pwm.rs
copi/tests/: pio_parser.rs
crates/copi-cli/: Cargo.toml
crates/copi-cli/src/: daemon.rs  flash.rs  main.rs  query.rs
crates/copi-cli/src/utils/: list_boot_pico.rs  mod.rs
crates/copi-core/: Cargo.toml  build.rs
crates/copi-core/src/: lib.rs  mobile.rs  types.rs
crates/copi-core/src/api/: gpio.rs  mod.rs  pio.rs  playground.rs  pwm.rs
crates/copi-core/static/playground/: index.html
crates/copi-mobile-binding/: Cargo.toml
crates/copi-mobile-binding/src/: export.udl  lib.rs
crates/copi-protocol/src/: lib.rs
firmware/pico/: Cargo.toml
firmware/pico2/: Cargo.toml  build.rs
firmware/pico2/src/: command.rs  main.rs  peripherals.rs  pio.rs  rhai.rs  usb.rs
firmware/pico2/src/utils/: mod.rs  pin.rs  slot.rs
firmware/rp2040/: Cargo.toml
firmware/rp235x/: Cargo.toml
firmware/rp235x/src/: gpio.rs  main.rs
pico/: .gitignore  Cargo.toml  build.rs
pico/src/: main.rs
tests/: gpio.http  pio_pwm.http
