[package]
name = "copi"
version = "0.1.0"
edition = "2024"
default-run = "copi"

[dependencies]
tokio = { version = "1", features = ["full"] }
copi-core = { path = "../copi-core" }
env_logger = "0.11"
sysinfo = "0.34"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rust-embed = "8.6.0"
log = "0.4"
