[package]
name = "copi-core"
version = "0.1.0"
edition = "2024"

[dependencies]
copi-protocol = { path = "../copi-protocol" }
minicbor = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.5"
axum = { version = "0.7.7", features = ["macros"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pio-parser = "0.3.0"
pio-core = "0.3.0"
