[package]
name = "copi-core"
version = "0.1.0"
edition = "2024"

[dependencies]
copi-protocol = { path = "../copi-protocol" }
minicbor = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.7", features = ["macros"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pio-parser = "0.3.0"
pio-core = "0.3.0"
nusb = "0.1.13"
rust-embed = "8.6.0"
mime_guess = "2.0.5"
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
tokio-serial = "5.4.5"
serialport = "4.7.1"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-serial = "5.4.5"
serialport = "4.7.1"

[target.'cfg(target_os = "windows")'.dependencies]
tokio-serial = "5.4.5"
serialport = "4.7.1"
