[package]
name = "copi-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pio-parser = "0.3.0"
pio-core = "0.3.0"
nusb = "0.1.13"
rust-embed = "8.6.0"
mime_guess = "2.0.5"
anyhow = "1.0"
prost = "0.13"
http-body-util = "0.1.3"

[target.'cfg(target_os = "macos")'.dependencies]
tokio-serial = "5.4.5"
serialport = "4.7.1"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-serial = "5.4.5"
serialport = "4.7.1"

[target.'cfg(target_os = "windows")'.dependencies]
tokio-serial = "5.4.5"
serialport = "4.7.1"

[build-dependencies]
prost-build = "0.13"
