[package]
name = "copi-mobile-binding"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]
name = "copi_mobile_binding"

[dependencies]
uniffi = { version = "0.29" }
log = "0.4"
thiserror = "2.0.12"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
copi-core = { path = "../copi-core" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
