[package]
edition = "2024"
name = "copi-firmware-pico"
version = "0.1.0"
resolver = "2"

[[bin]]
name = "copi-firmware-pico"
test = false
bench = false

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.7", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
cortex-m = { version = "0.7.6" }
embassy-rp = { version = "0.3.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
toml-cfg = "=0.1.3"
rand = { version = "0.8.5", default-features = false }

minicbor = { version = "0.26.1", features = ["derive"] }

[build-dependencies]
toml-cfg = "=0.1.3"

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
