[package]
name = "copi-firmware-pico2"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "copi-firmware-pico2"
test = false
bench = false

# https://github.com/embassy-rs/embassy/issues/3954
# rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" tag = embassy-rp-v0.4.0

[dependencies]
defmt = "0.3"
embassy-executor = { git = "https://github.com/enbop/embassy", rev = "f65f5cf841865a8d901d7fc3191d4046d6e921c4", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-rp = { git = "https://github.com/enbop/embassy", rev = "f65f5cf841865a8d901d7fc3191d4046d6e921c4", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-time = { git = "https://github.com/enbop/embassy", rev = "f65f5cf841865a8d901d7fc3191d4046d6e921c4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { git = "https://github.com/enbop/embassy", rev = "f65f5cf841865a8d901d7fc3191d4046d6e921c4", features = [
    "defmt",
] }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rt = "0.7.0"

minicbor = { version = "0.26.1", features = ["derive"] }
copi-protocol = { path = "../../copi-protocol" }

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
