[package]
name = "copi-firmware-pico2"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "copi-firmware-pico2"
test = false
bench = false

[features]
default = []
rhai = ["dep:rhai", "dep:embedded-alloc"]

# https://github.com/embassy-rs/embassy/issues/3954
# rev = "38f26137fc67beb874aa73c9a7ab2150d9f3d372" tag = embassy-rp-v0.4.0

[dependencies]
defmt = "0.3"
embassy-executor = { git = "https://github.com/enbop/embassy", rev = "1d1257b07e802a495608fa60042fa096c893646a", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-rp = { git = "https://github.com/enbop/embassy", rev = "1d1257b07e802a495608fa60042fa096c893646a", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp235xa",
    "binary-info",
] }
embassy-time = { git = "https://github.com/enbop/embassy", rev = "1d1257b07e802a495608fa60042fa096c893646a", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-usb = { git = "https://github.com/enbop/embassy", rev = "1d1257b07e802a495608fa60042fa096c893646a", features = [
    "defmt",
] }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-rt = "0.7.0"

pio = "0.3.0"

rhai = { version = "1.21.0", optional = true, default-features = false, features = [
    "no_std",
    "f32_float",
    "only_i32",
] }
embedded-alloc = { version = "0.6.0", optional = true }
femtopb = "0.8.0"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"

[profile.dev]
lto = true
opt-level = "z"

[build-dependencies]
femtopb-build = "0.8.0"
